[package]
name = "mint-tea"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tempfile = "0.7.0"
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
socket2 = "0.6.0"
tokio = { version = "1.47.0", features = ["full"] }
zip = "4.3.0"
frankenstein = { version = "0.45", features = ["client-reqwest"] }