[package]
name = "mint-tea"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3"
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6.0"
tokio = { version = "1.47.0", features = ["full"] }
zip = "6.0.0"
frankenstein = { version = "0.45", features = ["client-reqwest"] }
anyhow = "1.0"
futures = "0.3.31"
dashmap = "6.1.0"
reqwest = { version = "0.12.25", features = ["json", "cookies"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
regex = "1.12.2"
